--- a/war/Pgu_translate.css
+++ b/war/Pgu_translate.css
@@ -47,4 +47,5 @@ h1 {
 
 .fg_bigger { font-size: larger !important; }
 .fg_white { color: #FFFFFF !important; }
+.fg_font_25 { font-size: 25px !important; }
 
